---
source: archetect_minijinja/tests/test_templates.rs
description: "{{ unsafe }}\n{% autoescape true %}{{ unsafe }}{% endautoescape %}\n{% autoescape false %}{{ unsafe }}{% endautoescape %}\n{% autoescape \"html\" %}{{ unsafe }}{% endautoescape %}\n{% autoescape \"none\" %}{{ unsafe }}{% endautoescape %}"
info:
  unsafe: "<foo>"
input_file: archetect_minijinja/tests/inputs/autoescape.txt
---
<foo>
&lt;foo&gt;
<foo>
&lt;foo&gt;
<foo>

